# CST463

./: .course-config  .envrc  .gitignore  .studentignore  CLAUDE.md  README.md  pyproject.toml  syllabus.md
.github/workflows/: sync-syllabus.yml
demos/: common.py
demos/cnn-visualization/: README.md  cnn_explainability_demo.ipynb
demos/demo-gradient_descent/: README.md  gradient_descent_demo.py
demos/demo-tensorflow/: demo-tf.ipynb
demos/time-series/: 1d-cnns.ipynb
demos/week07/: activation_funcs.ipynb  overfitting.ipynb  vanishing.ipynb
demos/week08/: cnn_activation_playground_9x9.ipynb  functional-callbacks.ipynb
final_project/: README.md  final_submission.md  project_ideas.md  proposal-template.md  proposal.md  update-template.md  update.md
labs/lab01/: lab01-vectors.md
labs/lab02-pca/: pca.completed.py
lectures/: pca_walkthrough.tex
programming-assignments/: README.md  run_tests.py
programming-assignments/PA1/: README.md  scoring.yaml  student_code.py  tests-reserved.py  tests.py  visualization_analysis.ipynb
programming-assignments/PA2/: canvas_rubric.csv  peer_review_rubric.md  scoring.yaml  student_code.py  tests.py  todo.md  visualization_analysis.ipynb
programming-assignments/PA3/: README.md  peer_review_rubric.md  scoring.yaml  student_code.py  tests.py  todo.md  utils.py  visualization_analysis.ipynb
programming-assignments/PA4/: README.md  peer_review_rubric.md  scoring.yaml  student_code.py  tests.py  utils.py  visualization_analysis.ipynb
programming-assignments/PA5/: README.md  (+6 more)
scripts/: grader.py  publish_to_students.sh
(+4 files in other folders)
