[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CST463"
version = "0.1.0"
description = "Repository for CST463 at CSUMB"
authors = [
    {name = "Sam Ogden", email = "samuel.s.ogden@gmail.com"},
]
requires-python = ">=3.10"


dependencies = [
    "Jinja2==3.1.3",
    "python-dotenv==1.0.1",
    "PyYAML==6.0.1",
    "requests==2.32.2",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "numpy",
]


[tool.hatch.metadata]
allow-direct-references = true
